[gd_scene load_steps=16 format=2]

[ext_resource path="res://overlays/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/npc_ant.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Font/OpenSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/background/ant_bg_v2.png" type="Texture" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/background/ant_backgroun_tilemap.png" type="Texture" id=6]
[ext_resource path="res://assets/tilesets/foreground.tres" type="TileSet" id=7]
[ext_resource path="res://assets/sprites/background/dirt_bg_1.png" type="Texture" id=8]
[ext_resource path="res://entities/todeskaefer.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Font/bold_font.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=186]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=187]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=189]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=190]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="TileSet" id=176]
resource_local_to_scene = true
0/name = "dirt_bg_1.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 17 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "ant_bg_v2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "ant_backgroun_tilemap.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 64, 16, 16 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "ant_backgroun_tilemap.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 80, 64, 48, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 0
3/autotile/bitmask_flags = [  ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "ant_backgroun_tilemap.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 208, 16, 16 )
4/tile_mode = 1
4/autotile/bitmask_mode = 0
4/autotile/bitmask_flags = [  ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 16, 16 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "ant_backgroun_tilemap.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 224, 224, 16, 16 )
5/tile_mode = 2
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ant_backgroun_tilemap.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 240, 240 )
6/tile_mode = 2
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 16, 16 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="main" type="Node2D"]
script = ExtResource( 5 )

[node name="menu" parent="." instance=ExtResource( 1 )]
z_index = 10

[node name="Title" parent="menu" index="0"]
show_behind_parent = true

[node name="lore" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 0 )

[node name="ColorRect" type="ColorRect" parent="lore"]
margin_left = -364.0
margin_top = 2.0
margin_right = 386.0
margin_bottom = 721.0
color = Color( 1, 1, 1, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="lore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 186 )
text = "Ant Manager"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lore" type="Label" parent="lore/Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -357.5
margin_top = 188.0
margin_right = 362.5
margin_bottom = 530.0
custom_fonts/font = SubResource( 187 )
text = "Ant manager is an ant colony simulator. 

Being an ant is hard.You must find resources. Please the queen. 
Survive encounters with unfriendly creatures.

Your job is to guide your colony to prosperity by exploring the world and find resources.
Your fellow ants aren't very bright! They mostly move randomly. 
However, you have a powerful tool at your disposal! As the leading worker ant, you can
lay down a pheromone trail which will let your fellow ants know which path to take!

Don't worry about collecting resources - that's what the colony is built for! Other ants will
take on resources when they find them and proceed to bring them back to the queen.

Remember! It is your duty to provide the queen with valuable resources. She will reward you with more
brothers and sisters to expand the colony!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="lore/Title"]
margin_left = 597.255
margin_top = 675.398
margin_right = 690.255
margin_bottom = 703.398
custom_fonts/font = SubResource( 189 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 0 )

[node name="ColorRect" type="ColorRect" parent="credits"]
margin_left = -364.0
margin_top = 2.0
margin_right = 386.0
margin_bottom = 721.0
color = Color( 1, 1, 1, 0.568627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="credits"]
margin_left = 397.255
margin_top = 675.398
margin_right = 490.255
margin_bottom = 703.398
custom_fonts/font = SubResource( 189 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -229.5
margin_top = 100.0
margin_right = 229.5
margin_bottom = 42.0
custom_fonts/font = ExtResource( 10 )
text = "Brought to you by:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.5
margin_top = 300.0
margin_right = 229.5
margin_bottom = 422.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="credits/GridContainer"]
margin_right = 459.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 190 )
text = "Sebasti√£o Miranda, Junior Pixel Artist

Joshua, Junior Ant Geneticist

Diogo, Junior Product Manager - diogormalmeida@gmail.com"
align = 1
valign = 1

[node name="hud_ants" type="Node2D" parent="."]

[node name="Node2D" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 564.954, 242.601 )
scale = Vector2( 5, 5 )

[node name="Node2D2" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 785.723, 261.534 )
scale = Vector2( 5, 5 )
change_dir_interval = 3.0

[node name="Node2D3" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 341.086, 570.929 )
scale = Vector2( 5, 5 )
change_dir_interval = 4.0

[node name="Node2D4" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 149.627, 133.84 )
scale = Vector2( 5, 5 )
change_dir_interval = 2.0

[node name="Node2D5" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 738.19, 559.057 )
scale = Vector2( 5, 5 )
change_dir_interval = 3.0

[node name="Enemy" parent="hud_ants/Node2D5/base_ant" index="4"]
visible = true

[node name="Node2D6" parent="hud_ants" instance=ExtResource( 2 )]
position = Vector2( 274.53, 364.226 )
scale = Vector2( 5, 5 )
change_dir_interval = 5.0

[node name="Miner" parent="hud_ants/Node2D6/base_ant" index="3"]
visible = true

[node name="Todeskaefer" parent="hud_ants" instance=ExtResource( 9 )]
position = Vector2( 139.185, 552.251 )
scale = Vector2( 5, 5 )

[node name="menu_level" type="Node2D" parent="."]

[node name="Foreground" type="TileMap" parent="menu_level"]
scale = Vector2( 5, 5 )
z_index = 1
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 4
collision_mask = 2
format = 1
tile_data = PoolIntArray( -196513, 1, 0, -130977, 1, 0, -1, 29, 0, -65536, 29, 3, -65535, 29, 1, -65534, 29, 2, -65533, 29, 524295, -65532, 29, 1, -65531, 29, 524294, -65530, 29, 524291, -65529, 29, 524295, -65528, 29, 6, -65527, 29, 2, -65526, 29, 3, -65525, 29, 9, -65524, 29, 4, -65523, 29, 10, 65535, 29, 327680, 0, 29, 131074, 1, 29, 65544, 2, 29, 655366, 3, 29, 655364, 4, 29, 131079, 5, 29, 131079, 6, 29, 131078, 7, 29, 131079, 8, 29, 655368, 9, 29, 655363, 10, 29, 655362, 11, 29, 65544, 12, 29, 131080, 13, 29, 262146, 131071, 29, 131072, 65536, 29, 65544, 65548, 29, 65544, 65549, 29, 327682, 196607, 29, 393216, 131072, 29, 65544, 131073, 29, 65544, 131074, 29, 262150, 131075, 29, 393220, 131076, 29, 65544, 131077, 29, 262151, 131084, 29, 327680, 131085, 29, 131082, 131168, 1, 0, 262143, 29, 196608, 196608, 29, 65544, 196613, 29, 65544, 196620, 29, 393224, 196621, 29, 262146, 196704, 1, 0, 327679, 29, 524288, 262144, 29, 327690, 262149, 29, 327687, 262156, 29, 589824, 262157, 29, 131082, 262240, 1, 0, 393215, 29, 196616, 327680, 29, 327690, 327685, 29, 327683, 327690, 29, 65544, 327692, 29, 196608, 327693, 29, 327690, 327776, 1, 0, 458751, 29, 262152, 393216, 29, 458762, 393221, 29, 327683, 393226, 29, 65544, 393228, 29, 393224, 393229, 29, 196610, 393312, 1, 0, 524287, 29, 327680, 458752, 29, 65544, 458757, 29, 65544, 458764, 29, 65544, 458765, 29, 458762, 458848, 1, 0, 589823, 29, 262144, 524288, 29, 524290, 524289, 29, 65544, 524290, 29, 7, 524291, 29, 8, 524292, 29, 65544, 524293, 29, 65544, 524294, 29, 65544, 524295, 29, 9, 524296, 29, 524291, 524297, 29, 3, 524298, 29, 524292, 524299, 29, 65544, 524300, 29, 524296, 524301, 29, 196610, 524384, 1, 0, 655359, 29, 262144, 589824, 29, 524297, 589825, 29, 589825, 589826, 29, 196617, 589827, 29, 589833, 589828, 29, 589825, 589829, 29, 196617, 589830, 29, 65540, 589831, 29, 262145, 589832, 29, 65539, 589833, 29, 458753, 589834, 29, 65542, 589835, 29, 131073, 589836, 29, 65542, 589837, 29, 196610, 589920, 1, 0, 720895, 29, 655360, 655360, 29, 131077, 655361, 29, 655361, 655362, 29, 131076, 655363, 29, 131078, 655364, 29, 655367, 655365, 29, 131078, 655366, 29, 655368, 655367, 29, 131076, 655368, 29, 131078, 655369, 29, 655365, 655370, 29, 131079, 655371, 29, 655368, 655372, 29, 131079, 655373, 29, 655370, 655455, 1, 0, 720991, 1, 0, 786527, 1, 0, 852063, 1, 0, 917599, 1, 0, 983135, 1, 0, 1048671, 1, 0, 1114206, 1, 0, 1179742, 1, 0, 1245278, 1, 0, 1310814, 1, 0, 1376350, 1, 0, 1441885, 1, 0, 1507421, 1, 0, 1572957, 1, 0, 1638493, 1, 0, 1704029, 1, 0, 1769565, 1, 0, 1835101, 1, 0, 1900637, 1, 0, 2359381, 1, 0 )

[node name="Background" type="TileMap" parent="menu_level"]
scale = Vector2( 5, 5 )
z_index = -1
tile_set = SubResource( 176 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 6, 0, -65536, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 6, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, 65535, 6, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 4, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 131071, 6, 0, 65536, 6, 0, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 2, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 196607, 6, 0, 131072, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 262143, 6, 0, 196608, 6, 0, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 4, 0, 196616, 4, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 5, 0, 327691, 6, 0, 327692, 4, 0, 327693, 6, 0, 458751, 6, 0, 393216, 6, 0, 393217, 4, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 1, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 1, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 4, 0, 524300, 6, 0, 524301, 6, 0, 655359, 6, 0, 589824, 6, 0, 589825, 3, 0, 589826, 6, 0, 589827, 6, 0, 589828, 6, 0, 589829, 6, 0, 589830, 6, 0, 589831, 6, 0, 589832, 6, 0, 589833, 6, 0, 589834, 6, 0, 589835, 6, 0, 589836, 6, 0, 589837, 6, 0, 1900633, 1, 0, 2031667, 0, 0, 4522045, 0, 0, 4522046, 0, 0, 4587580, 0, 0, 4587581, 0, 0, 4587582, 0, 0, 4587583, 0, 0, 4653116, 0, 0, 4653117, 0, 0, 4653118, 0, 0, 4653119, 0, 0, 4653120, 0, 0, 4718651, 0, 0, 4718652, 0, 0, 4718653, 0, 0, 4718654, 0, 0, 4718655, 0, 0, 4718656, 0, 0, 4718657, 0, 0, 4784186, 0, 0, 4784187, 0, 0, 4784188, 0, 0, 4784189, 0, 0, 4784190, 0, 0, 4784191, 0, 0, 4784192, 0, 0, 4784193, 0, 0, 4784194, 0, 0, 4849720, 0, 0, 4849721, 0, 0, 4849722, 0, 0, 4849723, 0, 0, 4849724, 0, 0, 4849725, 0, 0, 4849726, 0, 0, 4849727, 0, 0, 4849728, 0, 0, 4849729, 0, 0, 4849730, 0, 0, 4915255, 0, 0, 4915256, 0, 0, 4915257, 0, 0, 4915258, 0, 0, 4915259, 0, 0, 4915260, 0, 0, 4915261, 0, 0, 4915262, 0, 0, 4915263, 0, 0, 4915264, 0, 0, 4980790, 0, 0, 4980791, 0, 0, 4980792, 0, 0, 4980793, 0, 0, 4980794, 0, 0, 4980795, 0, 0, 4980796, 0, 0, 4980797, 0, 0, 4980798, 0, 0, 5046325, 0, 0, 5046326, 0, 0, 5046327, 0, 0, 5046328, 0, 0, 5046329, 0, 0, 5046330, 0, 0, 5046331, 0, 0, 5046332, 0, 0, 5111861, 0, 0, 5111862, 0, 0, 5111863, 0, 0, 5111864, 0, 0, 5111865, 0, 0, 5111866, 0, 0 )

[connection signal="pressed" from="menu/GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="menu/GridContainer/Button2" to="." method="_on_lore_Button_pressed"]
[connection signal="pressed" from="menu/GridContainer/Button3" to="." method="_on_credits_Button_pressed"]
[connection signal="pressed" from="lore/Title/Button" to="." method="_on_lore_back_Button_pressed"]
[connection signal="pressed" from="credits/Button" to="." method="_on_credits_back_Button_pressed"]

[editable path="menu"]
[editable path="hud_ants/Node2D3"]
[editable path="hud_ants/Node2D3/base_ant"]
[editable path="hud_ants/Node2D5"]
[editable path="hud_ants/Node2D5/base_ant"]
[editable path="hud_ants/Node2D6"]
[editable path="hud_ants/Node2D6/base_ant"]
